# linearSolv

./: .gitignore  Doxyfile  Makefile.am  README  aclocal.m4  config.h.in  configure.ac
m4/: ax_prog_doxygen.m4
mk/: doxygen.am  gcov.am
report/: report.tex
src/: Makefile.am
src/c/: Makefile.am
src/c/common/: .gitignore  Makefile.am  globals.c
src/c/common/includes/: globals.h
src/c/io/: .gitignore  Makefile.am  matio.c
src/c/io/includes/: matio.h
src/c/main/: .gitignore  Makefile.am  linsolv-cl.c  main.c
src/c/main/includes/: linsolv-cl.h
src/c/solvers/: .gitignore  Makefile.am  chol.c  conjugate.c  gauss.c  jacobi.c  lu.c  precondition.c  qr.c  seidel.c  steepest.c  subst.c  util.c
src/c/solvers/includes/: chol.h  conjugate.h  error.h  gauss.h  jacobi.h  lu.h  precondition.h  qr.h  seidel.h  steepest.h  subst.h  util.h
src/octave/dd_linearsolv/: COPYING  DESCRIPTION  INDEX
src/octave/dd_linearsolv/inst/: chol.m  conjugate.m  gauss.m  io.m  jacobi.m  lu.m  mat.m  precondition.m  qr.m  seidel.m  steepest.m  subst.m
test/: Makefile.am
test/common/: .gitignore  Makefile.am  common_suite.c  globals_test.c
test/common/includes/: globals_test.h
test/io/: .gitignore  Makefile.am  io_suite.c  io_test.c
test/io/includes/: io_test.h
test/solvers/: .gitignore  Makefile.am  chol_test.c  conjugate_test.c  gauss_test.c  jacobi_test.c  lu_test.c  precondition_test.c  qr_test.c  seidel_test.c  solvers_suite.c  steepest_test.c  subst_test.c
test/solvers/includes/: chol_test.h  conjugate_test.h  gauss_test.h  jacobi_test.h  lu_test.h  precondition_test.h  qr_test.h  seidel_test.h  steepest_test.h  subst_test.h
